[gd_scene load_steps=13 format=2]

[ext_resource path="res://Menu/Menu.gd" type="Script" id=1]
[ext_resource path="res://Sounds/click_menu.wav" type="AudioStream" id=2]
[ext_resource path="res://Menu/background_menu.png" type="Texture" id=3]
[ext_resource path="res://Menu/Pixel_Arial.tres" type="DynamicFont" id=4]
[ext_resource path="res://Menu/kalash_menu.png" type="Texture" id=5]
[ext_resource path="res://Menu/knight_big.png" type="Texture" id=6]
[ext_resource path="res://Menu/Alagard.tres" type="DynamicFont" id=7]
[ext_resource path="res://Menu/Pixel_Arial3.tres" type="DynamicFont" id=8]
[ext_resource path="res://Menu/Pixel_Arial_Bold.tres" type="DynamicFont" id=9]
[ext_resource path="res://Menu/Pixel_Arial2.tres" type="DynamicFont" id=10]

[sub_resource type="Animation" id=1]

resource_name = "Play"
length = 2.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("content:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1.7 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( -480, 0 ) ]
}

[sub_resource type="Animation" id=2]

length = 1.5
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("content:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[node name="Menu" type="Node" index="0"]

script = ExtResource( 1 )

[node name="click_sound" type="AudioStreamPlayer" parent="." index="0"]

stream = ExtResource( 2 )
volume_db = 0.0
autoplay = false
mix_target = 0
bus = "Master"

[node name="MainMenu" type="Node2D" parent="." index="1"]

_sections_unfolded = [ "Transform", "Visibility" ]

[node name="background" type="Sprite" parent="MainMenu" index="0"]

position = Vector2( 560, 320 )
texture = ExtResource( 3 )
_sections_unfolded = [ "Transform", "Visibility" ]

[node name="content" type="Node2D" parent="MainMenu" index="1"]

position = Vector2( 560, 320 )
_sections_unfolded = [ "Material", "Visibility" ]

[node name="CreditButton" type="Button" parent="MainMenu/content" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -130.0
margin_top = 200.0
margin_right = 4.0
margin_bottom = 234.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "CREDITS"
flat = true
align = 1
_sections_unfolded = [ "custom_colors", "custom_fonts" ]

[node name="PlayButton" type="Button" parent="MainMenu/content" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -310.0
margin_top = 200.0
margin_right = -176.0
margin_bottom = 234.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "PLAY"
flat = true
align = 1
_sections_unfolded = [ "custom_colors", "custom_fonts" ]

[node name="RulesButton" type="Button" parent="MainMenu/content" index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -480.0
margin_top = 200.0
margin_right = -346.0
margin_bottom = 234.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "RULES"
flat = true
align = 1
_sections_unfolded = [ "custom_colors", "custom_fonts" ]

[node name="KalashLeft" type="Sprite" parent="MainMenu/content" index="3"]

position = Vector2( -328, 214 )
texture = ExtResource( 5 )
hframes = 2
_sections_unfolded = [ "Animation", "Transform" ]

[node name="KalashRight" type="Sprite" parent="MainMenu/content" index="4"]

position = Vector2( -160, 214 )
texture = ExtResource( 5 )
hframes = 2
frame = 1
_sections_unfolded = [ "Animation", "Transform" ]

[node name="knight_big" type="Sprite" parent="MainMenu/content" index="5"]

position = Vector2( -240, 0 )
texture = ExtResource( 6 )
_sections_unfolded = [ "Material", "Transform", "Visibility", "Z Index" ]

[node name="anim" type="AnimationPlayer" parent="MainMenu" index="2"]

root_node = NodePath("..")
autoplay = "Start"
playback_process_mode = 1
playback_default_blend_time = 0.0
playback_speed = 1.0
anims/Play = SubResource( 1 )
anims/Start = SubResource( 2 )
blend_times = [  ]

[node name="Credits" type="Panel" parent="." index="2"]

visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 640.0
margin_bottom = 640.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1

[node name="CenterContainer" type="CenterContainer" parent="Credits" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 640.0
margin_bottom = 640.0
rect_min_size = Vector2( 50, 50 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
use_top_left = false
_sections_unfolded = [ "Rect", "Size Flags" ]

[node name="CredtsText" type="RichTextLabel" parent="Credits/CenterContainer" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 30.0
margin_right = 640.0
margin_bottom = 610.0
rect_min_size = Vector2( 640, 580 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_fonts/bold_italics_font = ExtResource( 7 )
custom_fonts/italics_font = ExtResource( 8 )
custom_fonts/bold_font = ExtResource( 9 )
custom_fonts/normal_font = ExtResource( 10 )
bbcode_enabled = true
bbcode_text = "[center][b][i]KalashKnight[/i][/b]

[b]-- PROGRAMMING --[/b]
Eptwalabha [i](@eptwalabah)[/i]
Emmanuel Payet [i](@jakspining)[/i]
Jean-Matthieu Golfier [i](@jmgolfier)[/i]
Thomas Loubiou [i](@xabufr)[/i]

[b]-- GRAPHICS --[/b]
Cassandra Courjaud [i](@kalavecy)[/i]

[b]-- SOUNDS --[/b]
Emmanuel Payet [i](@jakspining)[/i]
Jean-Matthieu Golfier [i](@jmgolfier)[/i]

[b]-- RESSOURCES --[/b]
Hewett Tsoi [i]for Alagard font[/i]
Caly Martin (SparklyDest) [i]for Gothic Pixel font[/i]
Music: Eric Skiff - [i]Jumpshot - Resistor Anthems[/i]


[i]This game was made for Ludum Dare 41 using Godot Engine.
We hope you enjoyed it ! :)[/i][/center]"
visible_characters = -1
percent_visible = 1.0
meta_underlined = true
tab_size = 4
text = "KalashKnight

-- PROGRAMMING --
Eptwalabha (@eptwalabah)
Emmanuel Payet (@jakspining)
Jean-Matthieu Golfier (@jmgolfier)
Thomas Loubiou (@xabufr)

-- GRAPHICS --
Cassandra Courjaud (@kalavecy)

-- SOUNDS --
Emmanuel Payet (@jakspining)
Jean-Matthieu Golfier (@jmgolfier)

-- RESSOURCES --
Hewett Tsoi for Alagard font
Caly Martin (SparklyDest) for Gothic Pixel font
Music: Eric Skiff - Jumpshot - Resistor Anthems


This game was made for Ludum Dare 41 using Godot Engine.
We hope you enjoyed it ! :)"
scroll_active = false
scroll_following = false
selection_enabled = false
override_selected_font_color = false
_sections_unfolded = [ "Anchor", "BBCode", "Focus", "Grow Direction", "Hint", "Material", "Mouse", "Rect", "Size Flags", "Theme", "Visibility", "custom_colors", "custom_constants", "custom_fonts", "custom_styles" ]

[node name="BackToMenu" type="Button" parent="Credits" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 490.0
margin_top = 610.0
margin_right = 753.0
margin_bottom = 644.0
rect_scale = Vector2( 0.5, 0.5 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_fonts/font = ExtResource( 4 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Go back to the menu"
flat = false
align = 1
_sections_unfolded = [ "Rect", "custom_colors", "custom_fonts" ]

[node name="Rules" type="Panel" parent="." index="3"]

visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 640.0
margin_bottom = 640.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1

[node name="CenterContainer" type="CenterContainer" parent="Rules" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 640.0
margin_bottom = 640.0
rect_min_size = Vector2( 50, 50 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
use_top_left = false
_sections_unfolded = [ "Rect", "Size Flags" ]

[node name="RulesText" type="RichTextLabel" parent="Rules/CenterContainer" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 45.0
margin_top = 45.0
margin_right = 595.0
margin_bottom = 595.0
rect_min_size = Vector2( 550, 550 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_fonts/normal_font = ExtResource( 4 )
bbcode_enabled = true
bbcode_text = "You are a brave knight who wants to join his beloveled princess to kiss her. But the king doesn't agree. Actually he doesn't like you...
You crossed the mountain and defeated the terrible dragon with your kalashnikov to prove him you can take care of his daughter. You are right now on your way back.....

[center]*** RULES ***[/center]
You have to avoid all the sh** the king's soldiers are sending to kill you. You can shoot the blocks to move or destroy them.
Sometimes your fairy godmother will give you a bonus card, but sometimes she is drunk and it's not a bonus.
Show the king that you can escape this by scoring the maximum.
Good luck."
visible_characters = -1
percent_visible = 1.0
meta_underlined = true
tab_size = 4
text = "You are a brave knight who wants to join his beloveled princess to kiss her. But the king doesn't agree. Actually he doesn't like you...
You crossed the mountain and defeated the terrible dragon with your kalashnikov to prove him you can take care of his daughter. You are right now on your way back.....

*** RULES ***
You have to avoid all the sh** the king's soldiers are sending to kill you. You can shoot the blocks to move or destroy them.
Sometimes your fairy godmother will give you a bonus card, but sometimes she is drunk and it's not a bonus.
Show the king that you can escape this by scoring the maximum.
Good luck."
scroll_active = false
scroll_following = false
selection_enabled = false
override_selected_font_color = false
_sections_unfolded = [ "Anchor", "BBCode", "Focus", "Grow Direction", "Hint", "Material", "Mouse", "Rect", "Size Flags", "Theme", "Visibility", "custom_colors", "custom_constants", "custom_fonts", "custom_styles" ]

[node name="BackToMenu" type="Button" parent="Rules" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 490.0
margin_top = 610.0
margin_right = 753.0
margin_bottom = 644.0
rect_scale = Vector2( 0.5, 0.5 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_fonts/font = ExtResource( 4 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Go back to the menu"
flat = false
align = 1
_sections_unfolded = [ "Rect", "custom_colors", "custom_fonts" ]

[connection signal="pressed" from="MainMenu/content/CreditButton" to="." method="_on_CreditButton_pressed"]


